<resources>
    <string name="which_call_to_activate">Which call to activate?</string>
    <string name="onscreenHangupAll">Hangup all</string>
    <string name="onscreenHangupHolding">Hangup holding</string>
    <string name="onscreenHangupActiveAndAnswerWaiting">Hangup active, answer waiting</string>
    <string name="onscreenECT">Transfer</string>
    <string name="dm_lock">DM Locked</string>
    <string name="dm_unlock">DM Unlock</string>
    <string name="start_record">Start recording</string>
    <string name="stop_record">Stop recording</string>
    <string name="str_db_playlist_name">My recordings</string>
    <string name="alert_device_error">Error occurred on audio device</string>
    <string name="ext_media_badremoval_notification_title">SD card unexpectedly removed</string>
    <string name="error_sdcard_access">Unable to access SD card</string>
    <string name="confirm_device_info_full">SD card is out of space, the recording has been saved.</string>
    <string name="confirm_save_info_saved">The recording has been saved</string>
    <string name="sim_toolkit">SIM Toolkit</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="no_sim_card_inserted">Please insert SIM to launch SIM Toolkit.</string>
    <string name="airplane_mode_on">Unable to launch SIM Toolkit since airplane mode is on.</string>
    <string name="lable_sim_not_ready">SIM Toolkit is not ready or unsupported</string>
    <string name="gemini_3g_indic">3G</string>
    <string name="callFailed_dsac_vt_incompatible_destination">Video call cannot be setup.Video telephone is unsupported on the phone you calling, dial with voice call?</string>
    <string name="callFailed_dsac_vt_resource_unavailable">Video call cannot be setup.The phone you have dialed is out of 3G service area, dial with voice call?</string>
    <string name="callFailed_dsac_vt_bearer_not_avail">Video call cannot be setup. Dial with voice call?</string>
    <string name="callFailed_dsac_vt_out_of_3G_yourphone">Your phone is out of 3G service area, dial with voice call?</string>
    <string name="callFailed_dsac_vt_bear_not_authorized">Video call cannot be setup.Video telephone service is not activated on this SIM card, dial with voice call?</string>
    <string name="notification_voicemail">Voicemail</string>
    <string name="turn_on_3g_service_message">3G service is off now, would you like to turn it on?</string>
    <string name="associate_sim_missing_message">The %1$s SIM is unavailable. Would you like to place the call via %2$s</string>
    <string name="associate_sim_missing_other">Other</string>
    <string name="vt_incoming_call">Video incoming call</string>
    <string name="vt_settings">Video settings</string>
    <string name="vt_local_video_zoom">Local video zoom</string>
    <string name="vt_local_video_brightness">Local video brightness</string>
    <string name="vt_local_video_effect">Local video effect</string>
    <string name="vt_local_video_nightmode">Local video night mode</string>
    <string name="vt_peer_video_quality">Peer video quality</string>
    <string name="vt_enable_back_camera">Enable back camera</string>
    <string name="vt_enable_back_camera_description">Available to switch cameras if turn on</string>
    <string name="vt_peer_video_bigger">Bigger Peer video</string>
    <string name="vt_peer_video_bigger_description">Turn on to make peer video bigger than local video</string>
    <string name="vt_outgoing_call">Outgoing video call</string>
    <string name="vt_outgoing_call_description">Display local video when make a video call</string>
    <string name="vt_incoming_call_description">Display local video when accept an incoming video call</string>
    <string name="vt_incoming_showme_always">Always</string>
    <string name="vt_incoming_showme_ask">Ask</string>
    <string name="vt_incoming_showme_disable">Disable</string>
    <string name="vt_pic_replace_local_default">Default picture</string>
    <string name="vt_pic_replace_local_freezeme">Freeze me</string>
    <string name="vt_pic_replace_local_mypic">My picture</string>
    <string name="vt_local_video_display">Local video display</string>
    <string name="vt_sd_null">"SD card is
unavailable"</string>
    <string name="vt_sd_not_enough">"SD card is running
out of space"</string>
    <string name="vt_peer_video_quality_normal">Normal</string>
    <string name="vt_peer_video_quality_sharp">Sharp</string>
    <string name="vt_ask_show_local">Show local video to peer?</string>
    <string name="vt_ask_show_local_yes">Yes</string>
    <string name="vt_ask_show_local_no">No</string>
    <string name="vt_change_my_pic">Change</string>
    <string name="vt_pic_saved_to_sd">Snapshot saved to SD card</string>
    <string name="vt_pic_saved_to_sd_fail">Failed to save snapshot</string>
    <string name="vt_error_network">Network unreachable.The video call will disconnect.</string>
    <string name="vt_error_media">Video cannot be displayed properly.The video call will disconnect.</string>
    <string name="vt_swap_video">Swap videos</string>
    <string name="vt_local_video_contrast">Local video contrast</string>
    <string name="vt_menu_switch">Switch camera</string>
    <string name="vt_menu_hide_me">Hide local video</string>
    <string name="vt_menu_show_me">Show local video</string>
    <string name="vt_menu_snapshot">Peer snapshot</string>
    <string name="vt_dis_peer_rep">Display peer video</string>
    <string name="vt_dis_peer_rep_des">Display picture for replacing peer video when it is unavailable</string>
    <string name="vt_peer_video_rep">Peer video replacement</string>
    <string name="vt_peer_video_rep_des">Set a picture to display when peer video unavailable</string>
    <string name="vt_vocie_answer">Voice answer</string>
    <string name="vt_wait_voice">Waiting for voice call connecting</string>
    <string name="vt_voice_connecting">Voice call connecting</string>
    <string name="vt_auto_dropback">Auto drop back</string>
    <string name="vt_auto_dropback_des">Drop back to voice call connecting automatically</string>
    <string name="vt_cannot_support_setting">The current camera cannot support this setting</string>
    <string name="vt_network_unreachable">Network unreachable.</string>
    <string name="vt_iot_error_01">Video call cannot be setup</string>
    <string name="vt_iot_error_02">The phone is busy</string>
    <string name="vt_iot_error_03">There is no answer</string>
    <string name="ring_only_once_title">Ring only once</string>
    <string name="ring_only_once_summary">Ring only once when choosing to accept a video call by voice call mode</string>
    <string name="dual_mic_title">Noise Reduction</string>
    <string name="dual_mic_turnoff">Dual mic noise Reduction off</string>
    <string name="dual_mic_turnon">Dual mic noise Reduction on</string>
    <string name="minutereminder_title">Minute reminder</string>
    <string name="minutereminder_turnon">Turn on minute reminder at 50s of every minute</string>
    <string name="minutereminder_turnoff">Turn off minute reminder</string>
    <string name="vt_cf_call_description">Video call forwarding settings</string>
    <string name="vt_cb_call_description">Video call barring settings</string>
    <string name="vt_addtional_call_description">Phone number and call waiting settings</string>
    <string name="others">Other Settings</string>
    <string name="setting_for_3G_service">3G service</string>
    <string name="call_reject_title">Call Rejection</string>
    <string name="call_reject_sum">Manage auto-rejection mode and list</string>
    <string name="voice_call_reject_mode_title">Voice call auto reject mode</string>
    <string name="voice_call_reject_list_title">Voice call auto reject list</string>
    <string name="voice_call_reject_list_sum">Manage voice call auto reject list</string>
    <string name="video_call_reject_mode_title">Video call auto reject mode</string>
    <string name="video_call_reject_list_title">Video call auto reject list</string>
    <string name="video_call_reject_list_sum">Manage video call auto reject list</string>
    <string name="lable_call_barring">Call barring</string>
    <string name="lable_all_outgoing">All outgoing calls</string>
    <string name="lable_all_outgoing_international">International outgoing calls</string>
    <string name="lable_all_out_except">International outgoing calls except to home PLMN</string>
    <string name="lable_all_incoming">All incoming calls</string>
    <string name="lable_incoming_calls_except">Incoming calls while roaming</string>
    <string name="deactivate_all">Cancel all</string>
    <string name="change_password">Change barring password</string>
    <string name="call_barring_sum">Voice call barring settings</string>
    <string name="lable_disable">Disabled</string>
    <string name="gsm_umts_network_preferences_title">Network Mode</string>
    <string name="gsm_umts_network_preferneces_summary">Not implemented yet!</string>
    <string name="gsm_umts_network_preferences_dialogtitle">Network Mode</string>
    <string name="voice_call">Voice Call</string>
    <string name="video_call">Video Call</string>
    <string name="internet_call">Internet Call</string>
    <string name="sum_voice_call">Voice call related settings</string>
    <string name="sum_video_call">Video call related settings</string>
    <string name="sum_internet_call">Internet call related settings</string>
    <string name="call_additional_sum">Others</string>
    <string name="vt_call_settings">Video call settings</string>
    <string name="vt_local_video_rep">Local video replacement</string>
    <string name="vt_pic_replace_local_description">Set a picture to display when camera off use</string>
    <string name="gemini_data_connection">Data connection</string>
    <string name="plmn_list_setting_title">Preferred networks</string>
    <string name="international_dialing_title">International dialing assist</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="call_forwarding_settings">Voice call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="sum_carrier_select">Choose a network operator</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="throttle_data_usage">Data usage</string>
    <string name="prefer_2g">Use only 2G networks</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="enter_pin2_text">PIN2</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary" />
</resources>