<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/others"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn_key" android:summary="@string/sum_fdn">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.mediatek.settings.FdnSetting2" />
    </PreferenceScreen>
    <CheckBoxPreference android:title="@string/minutereminder_title" android:key="minute_reminder_key" android:defaultValue="false" android:summaryOn="@string/minutereminder_turnoff" android:summaryOff="@string/minutereminder_turnon" />
    <CheckBoxPreference android:title="@string/dual_mic_title" android:key="dual_mic_key" android:defaultValue="true" android:summaryOn="@string/dual_mic_turnoff" android:summaryOff="@string/dual_mic_turnon" />
    <PreferenceScreen android:persistent="false" android:title="@string/respond_via_sms_setting_title" android:key="button_respond_via_sms_key" android:summary="@string/respond_via_sms_setting_summary">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.RespondViaSmsManager$Settings" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/call_reject_title" android:key="call_reject" android:summary="@string/call_reject_sum">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.mediatek.settings.CallRejectSetting" />
    </PreferenceScreen>
    <ListPreference android:persistent="false" android:entries="@array/tty_mode_entries" android:title="@string/tty_mode_option_title" android:key="button_tty_mode_key" android:summary="@string/tty_mode_option_summary" android:entryValues="@array/tty_mode_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/international_dialing_title" android:key="international_dialing_key" />
</PreferenceScreen>