<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_hold_voice" android:orderInCategory="1" android:title="@string/onscreenHoldText" />
    <item android:id="@id/menu_vt_voice_answer" android:orderInCategory="1" android:title="@string/vt_vocie_answer" />
    <item android:id="@id/menu_add_call" android:orderInCategory="1" android:title="@string/onscreenAddCallText" />
    <item android:id="@id/menu_merge_call" android:orderInCategory="1" android:title="@string/onscreenMergeCallsText" />
    <item android:id="@id/menu_switch_camera" android:orderInCategory="1" android:title="@string/vt_menu_switch" />
    <item android:id="@id/menu_take_peer_photo" android:orderInCategory="1" android:title="@string/vt_menu_snapshot" />
    <item android:id="@id/menu_swap_videos" android:orderInCategory="1" android:title="@string/vt_swap_video" />
    <item android:id="@id/menu_hide_local_video" android:orderInCategory="1" android:title="@string/vt_menu_hide_me" />
    <item android:id="@id/menu_voice_record" android:orderInCategory="1" android:title="@string/start_record" />
    <item android:id="@id/menu_video_setting" android:orderInCategory="1" android:title="@string/vt_settings" />
    <item android:id="@id/menu_hangup_all" android:orderInCategory="1" android:title="@string/onscreenHangupAll" />
    <item android:id="@id/menu_hangup_holding" android:orderInCategory="1" android:title="@string/onscreenHangupHolding" />
    <item android:id="@id/menu_hangup_active_and_answer_waiting" android:orderInCategory="1" android:title="@string/onscreenHangupActiveAndAnswerWaiting" />
    <item android:id="@id/menu_ect" android:orderInCategory="1" android:title="@string/onscreenECT" />
</menu>