<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.phone">
    <ListPreference android:entries="@array/gsm_umts_network_preferences_choices" android:title="@string/gsm_umts_network_preferences_title" android:key="gsm_umts_preferred_network_mode_key" android:summary="@string/gsm_umts_network_preferneces_summary" android:dialogTitle="@string/gsm_umts_network_preferences_dialogtitle" android:entryValues="@array/gsm_umts_network_preferences_values" />
    <PreferenceScreen android:persistent="false" android:title="@string/apn_settings" android:key="button_apn_key">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.ApnSettings" />
    </PreferenceScreen>
    <com.android.phone.Use2GOnlyCheckBoxPreference android:persistent="false" android:title="@string/prefer_2g" android:key="button_prefer_2g_key" />
    <PreferenceScreen android:persistent="false" android:title="@string/networks" android:key="button_carrier_sel_key" android:summary="@string/sum_carrier_select">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.NetworkSetting" />
    </PreferenceScreen>
</PreferenceScreen>